yml/3_contrail-cni-features/5_networkpolicy/cirros-db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cirros-db
  labels:
    name: cirros-db
spec:
  containers:
  - name: cirros-db
    image: cirros
    ports:
      - containerPort: 22
