yml/3_contrail-cni-features/5_networkpolicy/cirros-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cirros-web
  labels:
    name: cirros-web
spec:
  containers:
  - name: cirros-web
    image: cirros
    ports:
      - containerPort: 22
