yml/3_contrail-cni-features/5_networkpolicy/myns1-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: myns1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
